# robot_simulator

./: README.md
assembly/: CMakeLists.txt  package.xml  urdf.rviz
assembly/config/: joint_names_assembly.yaml
assembly/launch/: display.launch  example.launch  example1.launch  gazebo.launch
assembly/meshes/: 2_Link.STL  3_Link.STL  4_Link.STL  L0.STL  L2_Link.STL  L3_Link.STL  L4_Link.STL  L5_Link.STL  L6_Link.STL  LL1.STL  LL2.STL  LL3.STL  LL4.STL  LL5.STL  LL6.STL  LR1.STL  LR2.STL  LR3.STL  LR4.STL  LR6.STL  Microwave_left.STL  Microwave_right.STL  Oven_left.STL  R2_Link.STL  R3_Link.STL  R4_Link.STL  R5_Link.STL  R6_Link.STL  bx1.STL  bx2.STL
assembly/rviz/: example.rviz  urdf.rviz
assembly/urdf/: HDL-32E.urdf.xacro  VLP-16.urdf.xacro  example.urdf.xacro  kinect_v2.urdf.xacro  newnursing.urdf  robot.gazebo  robot.urdf.xacro  robot2.urdf
assembly/urdf/history/: newnursing.urdf
assembly/world/: example.world  newworld.world  scene.world  test.world
basecontrol/: CMakeLists.txt
basecontrol/config/: move_base_params.yaml
basecontrol/launch/: baseOnly.launch
basecontrol/src/: JoyTeleop.cpp  NaviCore.cpp  SerialManager.cpp  SimpleNav.cpp  baseOnly.cpp  basecontrol.cpp  goalSaver.cpp
robot/devel/: .catkin
robot/src/robot_description/: CMakeLists.txt  package.xml
robot/src/robot_description/config/: base_local_planner_params.yaml  local_costmap_params.yaml  mapping.rviz  navigation.rviz
robot/src/robot_description/launch/: display_gazebo.launch  gazebo_mapping_robot.launch  map_saver.launch  move_base.launch  navigation.launch  newgazebo.launch  state_xacro.launch  willowgarage_world.launch
robot/src/robot_description/maps/: map.yaml
robot/src/robot_description/meshes/: base_link.STL  left_back_wheel_link.STL  left_front_wheel_link.STL  right_back_wheel_link.STL  right_front_wheel_link.STL  upper_link.STL
robot/src/robot_description/urdf/: newro.xacro  robot.gazebo
robot1/: package.xml  urdf.rviz
robot1/config/: joint_names_robot1.yaml
robot1/launch/: display.launch  gazebo.launch
robot1/meshes/: link1.STL  link2.STL  link3.STL  link4.STL
robot1/urdf/: robot1.urdf
robot2/: package.xml  urdf.rviz
robot2/meshes/: 1_Link.STL
(+7 files in other folders)
