<package format="2">
  <name>assembly</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for assembly</p>
    <p>This package contains configuration data, 3D models and launch files
for assembly robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/velodyne_description</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/velodyne_simulator</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/velodyne_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
